fixed layout issues with scrolling

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,9 +14,11 @@
   bottom: 0;
 }
 .main {
-  position: relative;
-  padding-top: 60px;
-  margin-bottom: 60px;
+  position: absolute;
+  top:60px;
+  left: 0px;
+  right: 0px;
+  bottom:60px;
 }
 .bg-light-grey {
   background-color: #eee;
