--- a/src/app/entries/entries.component.scss
+++ b/src/app/entries/entries.component.scss
@@ -1,5 +1,5 @@
 .example-viewport {
-  height: 100vh;
+  height: calc(100vh - 120px);
   width: 100vw;
 
 }
